--- a/src/Components/Crypto/Crypto.sass
+++ b/src/Components/Crypto/Crypto.sass
@@ -40,6 +40,17 @@
             text-align: center
             color: #FFFFFF
             cursor: pointer
+@media screen and (max-width:1150px)
+    .Crypto
+        max-width: 1150px
+        width: 100%
+        display: flex
+        .wrapper
+            max-width: 1024px
+            width: 100%
+            .text
+                font-size: 40px
+                line-height: 48px
 
 @media screen and (max-width:1024px)
     .Crypto
@@ -51,7 +62,18 @@
             .text
                 font-size: 40px
                 line-height: 48px
-
+@media screen and (max-width:990px)
+   .Crypto
+        max-width: 990px
+        width: 100%
+        .wrapper
+            max-width: 744px
+            width: 100%
+            .text
+                width: 100%
+                font-size: 36px
+                line-height: 44px
+                
 @media screen and (max-width:768px)
     .Crypto
         max-width: 768px
@@ -64,7 +86,23 @@
                 font-size: 36px
                 line-height: 44px
 
-
+@media screen and (max-width:640px)
+    .Crypto
+        max-width: 640px
+        width: 100%
+        .wrapper
+            max-width: 520px
+            width: 100%
+            .text
+                width: 100%
+                font-size: 24px
+                line-height: 29px
+                .and
+                    display: block
+            .button
+                font-size: 18px
+                line-height: 150%
+                
 @media screen and (max-width:360px)
     .Crypto
         max-width: 360px
