--- a/src/Components/Features/1/Fr1.sass
+++ b/src/Components/Features/1/Fr1.sass
@@ -118,6 +118,22 @@
                         margin-left: 5%
                         width: 70%
 
+@media screen and (max-width:1150px)
+    .Fr1
+        max-width: 1150px
+        width: 100%
+        height: 900px
+        .wrapper
+            max-width: 1024px
+            width: 100%
+            align-items: center
+            .text
+                width: 100%
+                justify-content: center
+                .text1
+                    font-size: 40px
+                    line-height: 48px
+                    
 @media screen and (max-width:1024px)
     .Fr1
         max-width: 1024px
@@ -134,7 +150,13 @@
                     font-size: 40px
                     line-height: 48px
 
-
+@media screen and (max-width:990px)
+    .Fr1
+        max-width: 990px
+        width: 100%
+        .wrapper
+            max-width: 744px
+            width: 100%
 @media screen and (max-width:768px)
     .Fr1
         max-width: 768px
@@ -142,7 +164,61 @@
         .wrapper
             max-width: 744px
             width: 100%
-    
+@media screen and (max-width:640px)
+    .Fr1
+        max-width: 640px
+        width: 100%
+        background-position: center center
+        background-size: 150% 150%
+        height: 750px
+        .wrapper
+            max-width: 520px
+            width: 100%
+            .text
+                align-items: center
+                flex-direction: column
+                .text1
+                    font-size: 24px
+                    line-height: 29px
+                .text2
+                    font-size: 16px
+                    line-height: 19px
+            .block
+                width: 100%
+                .block1_1
+                    justify-content: center
+                    .block1
+                        max-width: 328px
+                        width: 100%
+                        height: 208px
+                        background: url('../../Images/Frame 102.png') 100%
+                        .span1
+                            width: 60%
+                            font-size: 14px
+                            line-height: 150%
+                .block2_2
+                    margin-top: 5%
+                    .block2
+                        max-width: 328px
+                        width: 100%
+                        height: 208px
+                        background: url('../../Images/Frame 102.png') 100%
+                        .span2
+                            width: 65%
+                            font-size: 14px
+                            line-height: 150%
+                .block3_3
+                    justify-content: center
+                    margin-top: 5%
+                    .block3
+                        max-width: 328px
+                        width: 100%
+                        height: 208px
+                        background: url('../../Images/Frame 102.png') 100%
+                        .span3
+                            width: 65%
+                            font-size: 14px
+                            line-height: 150%
 @media screen and (max-width:360px)
     .Fr1
         max-width: 360px
@@ -154,6 +230,7 @@
             max-width: 340px
             width: 100%
             .text
+                align-items: center
                 flex-direction: column
                 .text1
                     font-size: 24px
