--- a/src/Components/Features/2/Fr2.sass
+++ b/src/Components/Features/2/Fr2.sass
@@ -157,6 +157,64 @@
                         height: 155px
                         width: 80%
 
+@media screen and (max-width:1150px)
+    .Fr2
+        padding-top: 18%
+        max-width: 1150px
+        width: 100%
+        height: 1100px
+       
+        .wrapper
+            max-width: 1024px
+            width: 100%
+            align-items: center
+            .text
+                width: 100%
+                justify-content: center
+                .text1
+                    font-size: 40px
+                    line-height: 48px
+            .block
+                width: 100%
+                display: grid
+                grid-template-columns: repeat(2,1fr)
+                grid-gap: 2%
+                grid-template-areas: "a b" "c d"
+               
+                .block1
+                    grid-area: a
+                    width: 100%
+                    margin-left: 0
+                    align-items: end
+                    .block1_1
+                        max-width: 383px
+                        width: 100%
+                        height: 387px
+                .block2
+                    grid-area: b
+                    width: 100%
+                    margin-left: 0
+                    .block2_2
+                        max-width: 383px
+                        width: 100%
+                        height: 387px                        
+                .block3
+                    grid-area: c
+                    width: 100%
+                    margin-left: 0
+                    align-items: end
+                    .block3_3
+                        max-width: 383px
+                        width: 100%
+                        height: 387px
+                .block4
+                    grid-area: d
+                    width: 100%
+                    margin-left: 0
+                    .block4_4
+                        max-width: 383px
+                        width: 100%
+                        height: 387px   
 
 @media screen and (max-width:1024px)
     .Fr2
@@ -216,7 +274,64 @@
                         height: 387px   
 
 
-
+@media screen and (max-width:990px)
+    .Fr2
+        max-width: 990px
+        width: 100%
+        height: 900px
+        .wrapper
+            max-width: 744px
+            width: 100%
+            .block
+                margin-top: 10%
+                .block1
+                    .block1_1
+                        max-width: 328px
+                        width: 100%
+                        height: 250px
+                        .photo1
+                            display: none
+                        .photo1_1
+                            display: block
+                        .span1
+                            width: 92%
+                            height: 96px
+                .block2
+                    .block2_2
+                        max-width: 328px
+                        width: 100%
+                        height: 250px 
+                        .photo2
+                            display: none
+                        .photo2_2
+                            display: block       
+                        .span2
+                            width: 90%
+                            height: 96px                
+                .block3
+                    .block3_3
+                        max-width: 328px
+                        width: 100%
+                        height: 250px
+                        .photo3
+                            display: none
+                        .photo3_3
+                            display: block
+                        .span3
+                            width: 90%
+                            height: 96px
+                .block4
+                    .block4_4
+                        max-width: 328px
+                        width: 100%
+                        height: 250px
+                        .photo4
+                            display: none
+                        .photo4_4
+                            display: block
+                        .span4
+                            width: 90%
+                            height: 96px
 @media screen and (max-width:768px)
     .Fr2
         max-width: 768px
@@ -276,7 +391,70 @@
                             width: 90%
                             height: 96px
 
-
+@media screen and (max-width:640px)
+    .Fr2
+        padding-top: 35%
+        max-width: 640px
+        width: 100%
+        height: 1430px
+        .wrapper
+            max-width: 520px
+            width: 100%
+            
+            .text
+                flex-direction: column
+                .text1
+                    text-align: center
+                    width: 100%
+                    font-size: 24px
+                    line-height: 29px
+                .text2
+                    font-size: 16px
+                    line-height: 19px
+            .block
+                display: flex
+                flex-direction: column
+                font-size: 14px
+                line-height: 150.02%
+                .block1
+                    align-items: center
+                    margin-left: 0
+                    .block1_1
+                        max-width: 328px
+                        width: 100%
+                        height: 250px
+                        .span1
+                            width: 80%
+                .block2
+                    align-items: center
+                    margin-top: 5%
+                    margin-left: 0
+                    .block2_2
+                        max-width: 328px
+                        width: 100%
+                        height: 250px
+                        .span2
+                            width: 80%
+                .block3
+                    align-items: center
+                    margin-top: 5%
+                    margin-left: 0
+                    .block3_3
+                        max-width: 328px
+                        width: 100%
+                        height: 250px
+                        .span3
+                            width: 71%
+                .block4
+                    align-items: center
+                    margin-top: 5%
+                    margin-left: 0
+                    .block4_4
+                        max-width: 328px
+                        width: 100%
+                        height: 250px
+                        .span4
+                            width: 80%
 @media screen and (max-width:360px)
     .Fr2
         padding-top: 35%
