--- a/src/Components/Pricing/3/Pr3.sass
+++ b/src/Components/Pricing/3/Pr3.sass
@@ -71,7 +71,28 @@
             .photo2
                 display: none
 
-
+@media screen and (max-width:1150px)
+    .Pr3
+        max-width: 1150px
+        width: 100%
+        .wrapper
+            max-width: 1024px
+            width: 100%
+            .gallery
+                .mob2
+                    display: none
+                .mob1
+                    display: block
+            .block
+                .text1
+                    font-size: 40px
+                    line-height: 48px
+                .text2
+                    width: 90%
+                .photo1
+                    margin-top: 5%
+                    width: 50%
+                    height: 102px
 @media screen and (max-width:1024px)
     .Pr3
         max-width: 1024px
@@ -95,7 +116,41 @@
                     width: 50%
                     height: 102px
 
-
+@media screen and (max-width:990px)
+    .Pr3
+        max-width: 990px
+        width: 100%
+        height: 1150px
+        .wrapper
+            max-width: 744px
+            width: 100%
+            flex-direction: column
+            .gallery
+                width: 100%
+                margin-bottom: 0
+                .mob1
+                    display: none
+                .mob3
+                    display: flex
+            .block
+                width: 100%
+                justify-content: center
+                align-items: center
+                .text1
+                    text-align: center
+                .text2
+                    width: 70%
+                    text-align: center
+                .photo1
+                    display: none
+                .photo2
+                    display: block
+                    margin-top: 3%
+                    margin-left: auto
+                    margin-right: auto
+                    width: 50%
+                .button
+                    margin-top: 3%
 @media screen and (max-width:768px)
     .Pr3
         max-width: 768px
@@ -131,7 +186,33 @@
                     width: 50%
                 .button
                     margin-top: 3%
-    
+@media screen and (max-width:640px)
+    .Pr3
+        max-width: 640px
+        width: 100%
+        height: 950px
+        .wrapper
+            max-width: 520px
+            width: 100%
+            .gallery
+                width: 100%
+                display: flex
+                justify-content: center
+                .mob3
+                    display: none
+                .mob4
+                    display: flex
+            .block
+                .text1
+                    font-size: 24px
+                    line-height: 29px
+                .text2
+                    width: 100%
+                    font-size: 16px
+                    line-height: 150%
+                .photo2
+                    width: 85%
+                    
 @media screen and (max-width:360px)
     .Pr3
         max-width: 360px
