--- a/src/Components/About/About.sass
+++ b/src/Components/About/About.sass
@@ -66,7 +66,25 @@
                 border-radius: 5px
                 border: none
                 cursor: pointer
-
+@media screen and (max-width:1150px)
+    .about
+        max-width: 1150px
+        width: 100%
+        .wrapper
+            max-width: 1024px
+            width: 100%
+            .photo
+                display: none
+            .photo2
+                display: block
+                margin-top: 12%
+                margin-left: 0
+                justify-content: flex-start
+                width: 50%
+            .text
+                margin-left: 1%
+                .text2
+                    width: 92%
 @media screen and (max-width:1024px)
     .about
         max-width: 1024px
@@ -87,7 +105,43 @@
                 .text2
                     width: 92%
 
-
+@media screen and (max-width:990px)
+    .about
+        max-width: 990px
+        width: 100%
+        height: 950px
+        .wrapper
+            max-width: 744px
+            width: 100%
+            flex-direction: column
+            align-items: center
+            justify-content: center
+            .photo2
+                margin-top: 0
+                display: flex
+                justify-content: center
+                width: 100%
+                order: 1
+            .text
+                margin-top: 5%
+                display: flex
+                flex-direction: column
+                align-items: center
+                width: 100%
+                order: 2
+                margin-left: 0
+                margin-top: 0
+                .text1
+                    max-width: 520px
+                    width: 100%
+                    height: 81px
+                    font-size: 18px
+                    line-height: 150%
+                    text-align: center
+                .text2
+                    margin-top: 7%
+                    width: 65%
+                    text-align: center
 @media screen and (max-width:768px)
     .about
         max-width: 768px
@@ -126,7 +180,31 @@
                     width: 65%
                     text-align: center
 
-
+@media screen and (max-width:640px)
+    .about
+        max-width: 640px
+        width: 100%
+        height: 800px
+        .wrapper
+            max-width: 420px
+            width: 100%
+            .photo2
+                display: none
+            .photo3
+                display: flex
+            .text
+                .text1
+                    width: 95%
+                    font-size: 14px
+                    line-height: 150%
+                .text2
+                    margin-top: 10%
+                    width: 90%
+                    font-size: 14px
+                    line-height: 150%
+                .button
+                    font-size: 18px
+                    line-height: 150%
 
 @media screen and (max-width:360px)
     .about
