--- a/src/Components/Features/3/Fr3.sass
+++ b/src/Components/Features/3/Fr3.sass
@@ -51,7 +51,60 @@
                 display: flex
                 justify-content: center
 
-
+@media screen and (max-width:990px)
+    .Fr3
+        padding-top: 5%
+        max-width: 990px
+        width: 100%
+        height: 450px
+        .wrapper
+            max-width: 1024px
+            width: 100%
+            .text1
+                font-size: 40px
+                line-height: 48px
+            .gallery
+                margin-top: 0
+                .photo2
+                    display: flex
+                    flex-direction: column
+                    align-items: center
+                    justify-content: center
+                    width: 50%
+                    .binance
+                        margin-top: 15%
+                        max-width: 238px
+                        width: 100%
+                        height: 48px
+                    .info
+                        width: 20%
+@media screen and (max-width:1150px)
+    .Fr3
+        padding-top: 5%
+        max-width: 1150px
+        width: 100%
+        height: 450px
+        .wrapper
+            max-width: 1024px
+            width: 100%
+            .text1
+                font-size: 40px
+                line-height: 48px
+            .gallery
+                margin-top: 0
+                .photo2
+                    display: flex
+                    flex-direction: column
+                    align-items: center
+                    justify-content: center
+                    width: 50%
+                    .binance
+                        margin-top: 15%
+                        max-width: 238px
+                        width: 100%
+                        height: 48px
+                    .info
+                        width: 20%
 @media screen and (max-width:1024px)
     .Fr3
         padding-top: 5%
@@ -103,7 +156,42 @@
                     .info
                         width: 30%
 
-
+@media screen and (max-width:640px)
+    .Fr3
+        max-width: 640px
+        width: 100%
+        height: 400px
+        .wrapper
+            max-width: 520px
+            width: 100%
+            .text1
+                width: 100%
+                font-size: 24px
+                line-height: 29px
+                display: flex
+                justify-content: center
+            .text2
+                margin-top: 5%
+                width: 95%
+                font-size: 16px
+                line-height: 150.02%
+            .gallery
+                width: 100%
+                
+                .photo1
+                    img
+                        max-width: 176px
+                        width: 100%
+                        height: 26px
+                .photo2
+                    .binance
+                        margin-top: 15%
+                        max-width: 177px
+                        width: 100%
+                        height: 36px
+                    .info
+                        margin-top: -8%
+                        width: 60%
 @media screen and (max-width:360px)
     .Fr3
         max-width: 360px
