--- a/src/Components/Footer/Footer.sass
+++ b/src/Components/Footer/Footer.sass
@@ -41,7 +41,13 @@
             width: 33%
             .icon1
                 display: none
-    
+@media screen and (max-width:1150px)
+    .Footer
+        max-width: 1150px
+        width: 100%
+        .wrapper
+            max-width: 1024px
+            width: 100%
 @media screen and (max-width:1024px)
     .Footer
         max-width: 1024px
@@ -49,6 +55,20 @@
         .wrapper
             max-width: 1024px
             width: 100%
+@media screen and (max-width:990px)
+    .Footer
+        max-width: 990px
+        width: 100%
+        .wrapper
+            max-width: 744px
+            width: 100%
+            flex-direction: column
+            align-items: center
+            justify-content: center
+        .gallery
+            margin-top: 5%
+        .text2
+            margin-top: 5%
 
 @media screen and (max-width:768px)
     .Footer
@@ -64,8 +84,20 @@
             margin-top: 5%
         .text2
             margin-top: 5%
-
-
+@media screen and (max-width:680px)
+    .Footer
+        max-width: 680px
+        width: 100%
+        .wrapper
+            max-width: 600px
+            width: 100%
+            .text1
+                width: 100%
+                margin-bottom: 0
+            .text2
+               
+                margin-bottom: 0
+                width: 100%
 @media screen and (max-width:360px)
     .Footer
         max-width: 360px
