--- a/src/Components/Full/Full.sass
+++ b/src/Components/Full/Full.sass
@@ -51,7 +51,25 @@
             color: #FFFFFF
             cursor: pointer
 
-
+@media screen and (max-width:1150px)
+    .Full
+        max-width: 1150px
+        width: 100%
+        background: url('../Images/BG1.svg') 100%
+        background-position: center center
+        .wrapper
+            max-width: 1024px
+            width: 100%
+            .text1
+                width: 59%
+                margin-left: 5%
+                font-size: 40px
+                line-height: 48px
+            .text2
+                width: 62%
+                margin-left: 5%
+            .button
+                margin-left: 5%
 @media screen and (max-width:1024px)
     .Full
         max-width: 1024px
@@ -71,7 +89,26 @@
                 margin-left: 5%
             .button
                 margin-left: 5%
-
+@media screen and (max-width:990px)
+    .Full
+        max-width: 990px
+        width: 100%
+        height: 566px
+        background: url('../Images/BG2.svg') 100%
+        .wrapper
+            max-width: 744px
+            width: 100%
+            align-items: center
+            .text1
+                width: 80%
+                margin-left: 0
+                text-align: center
+            .text2
+                width: 85%
+                margin-left: 0
+                text-align: center
+            .button
+                margin-left: 0
 @media screen and (max-width:768px)
     .Full
         max-width: 768px
@@ -93,7 +130,32 @@
             .button
                 margin-left: 0
 
-
+@media screen and (max-width:640px)
+    .Full
+        max-width: 640px
+        width: 100%
+        background: url('../Images/pe.png') 100% 
+        background-size: 100% 100%
+        height: 467px
+        .wrapper
+            max-width: 520px
+            width: 100%
+            .text1
+                width: 100%
+                font-size: 24px
+                line-height: 29px
+            .text2
+                margin-top: 10%
+                width: 90%
+                font-size: 16px
+                line-height: 150%
+            .button
+                margin-top: 10%
+                max-width: 282px
+                width: 100%
+                height: 60px
+                font-size: 18px
+                line-height: 150%
 @media screen and (max-width:360px)
     .Full
         max-width: 360px
