--- a/src/Components/Header/Header.sass
+++ b/src/Components/Header/Header.sass
@@ -17,6 +17,15 @@
         width: 100%
         background: #1A2037
 
+        .error
+            margin-left: 6%
+            button
+                color: #fff
+                text-transform: uppercase
+                height: 30px
+                border: none
+                background: transparent
+
         .photo
             justify-content: flex-start
             width: 20%
@@ -62,11 +71,227 @@
             line-height: 150%
             text-align: center
             color: #FFFFFF
-            margin-left: 4%
+            margin-left: 2%
             cursor: pointer
         .error1
             display: none
 
+@media screen and (max-width:1150px)
+    .header
+        max-width: 1150px
+        width: 100%
+        height: 114px
+        .wrapper
+            max-width: 1100px
+            width: 100%
+            
+            .photo
+                justify-content: flex-start
+                width: 90%
+
+            .navbar
+                display: none
+
+            .hamburger-menu
+                display: flex
+                width: 10%
+                justify-content: center
+                align-items: center
+
+                #menu__toggle 
+                    opacity: 0
+            
+                .menu__btn 
+                    display: flex
+                    align-items: center  
+                    position: relative
+                    width: 26px
+                    cursor: pointer
+                    z-index: 1
+                
+                .menu__btn > span,
+                .menu__btn > span::before,
+                .menu__btn > span::after 
+                    display: block
+                    position: absolute
+                    width: 100%
+                    height: 2px  
+                    background-color: #fff
+                    
+                .menu__btn > span::before 
+                    content: ''
+                    top: -8px
+                    
+                .menu__btn > span::after 
+                    content: ''
+                    top: 8px
+
+                .menu__box 
+                    display: block
+                    position: fixed
+                    visibility: hidden
+                    top: 0
+                    left: -100%  
+                    width: 300px
+                    height: 100%  
+                    margin: 0
+                    padding: 30px 0  
+                    list-style: none
+                    text-align: left  
+                    background: url('../Images/Frame 1839.svg') 100% 
+                    background-repeat: no-repeat
+                    background-size: cover
+                    background-position: center center
+                    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2)
+                    z-index: 2
+                    backdrop-filter: blur(10px)
+
+                .menu__item 
+                    display: block
+                    padding: 20px 24px  
+                    color: #fff  
+                    font-family: 'Inter', sans-serif
+                    font-size: 20px
+                    font-weight: 600
+                    text-decoration: none
+                    cursor: pointer
+                .menu__item:hover 
+                    border-left: 3px solid #2F80ED 
+                    color: #38D1BC !important
+                    text-shadow: 0 0 11px #38d1bc
+                #menu__toggle:checked ~ .menu__btn > span 
+                    transform: rotate(45deg)
+                #menu__toggle:checked ~ .menu__btn > span::before 
+                    top: 0
+                    transform: rotate(0)
+                #menu__toggle:checked ~ .menu__btn > span::after 
+                    top: 0
+                    transform: rotate(90deg)
+                #menu__toggle:checked ~ .menu__box 
+                    visibility: visible
+                    margin-top: 10.1%
+                    left: 0
+                .menu__btn > span,
+                .menu__btn > span::before,
+                .menu__btn > span::after 
+                    transition-duration: .25s
+                .menu__box 
+                    transition-duration: .25s
+                .menu__item 
+                    transition-duration: .25s
+            .error
+                display: none   
+            .error1
+                display: block
+                padding: 20px 24px  
+@media screen and (max-width:1080px)
+    .header
+        max-width: 1150px
+        width: 100%
+        height: 114px
+        .wrapper
+            max-width: 1100px
+            width: 100%
+            
+            .photo
+                justify-content: flex-start
+                width: 90%
+
+            .navbar
+                display: none
+
+            .hamburger-menu
+                display: flex
+                width: 10%
+                justify-content: center
+                align-items: center
+
+                #menu__toggle 
+                    opacity: 0
+            
+                .menu__btn 
+                    display: flex
+                    align-items: center  
+                    position: relative
+                    width: 26px
+                    cursor: pointer
+                    z-index: 1
+                
+                .menu__btn > span,
+                .menu__btn > span::before,
+                .menu__btn > span::after 
+                    display: block
+                    position: absolute
+                    width: 100%
+                    height: 2px  
+                    background-color: #fff
+                    
+                .menu__btn > span::before 
+                    content: ''
+                    top: -8px
+                    
+                .menu__btn > span::after 
+                    content: ''
+                    top: 8px
+
+                .menu__box 
+                    display: block
+                    position: fixed
+                    visibility: hidden
+                    top: 0
+                    left: -100%  
+                    width: 300px
+                    height: 100%  
+                    margin: 0
+                    padding: 30px 0  
+                    list-style: none
+                    text-align: left  
+                    background: url('../Images/Frame 1839.svg') 100% 
+                    background-repeat: no-repeat
+                    background-size: cover
+                    background-position: center center
+                    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2)
+                    z-index: 2
+                    backdrop-filter: blur(10px)
+
+                .menu__item 
+                    display: block
+                    padding: 20px 24px  
+                    color: #fff  
+                    font-family: 'Inter', sans-serif
+                    font-size: 20px
+                    font-weight: 600
+                    text-decoration: none
+                    cursor: pointer
+                .menu__item:hover 
+                    border-left: 3px solid #2F80ED 
+                    color: #38D1BC !important
+                    text-shadow: 0 0 11px #38d1bc
+                #menu__toggle:checked ~ .menu__btn > span 
+                    transform: rotate(45deg)
+                #menu__toggle:checked ~ .menu__btn > span::before 
+                    top: 0
+                    transform: rotate(0)
+                #menu__toggle:checked ~ .menu__btn > span::after 
+                    top: 0
+                    transform: rotate(90deg)
+                #menu__toggle:checked ~ .menu__box 
+                    visibility: visible
+                    margin-top: 11.1%
+                    left: 0
+                .menu__btn > span,
+                .menu__btn > span::before,
+                .menu__btn > span::after 
+                    transition-duration: .25s
+                .menu__box 
+                    transition-duration: .25s
+                .menu__item 
+                    transition-duration: .25s
+            .error
+                display: none   
+            .error1
+                display: block
+                padding: 20px 24px
 
 @media screen and (max-width:1024px)
     .header
@@ -177,6 +402,57 @@
                 display: block
                 padding: 20px 24px  
 
+@media screen and (max-width:990px)
+    .header
+        max-width: 990px
+        width: 100%
+        height: 64px
+
+        .wrapper
+            max-width: 850px
+            width: 100%
+            .hamburger-menu
+                #menu__toggle:checked ~ .menu__box 
+                    visibility: visible
+                    margin-top: 6.6%
+                    left: 0
+@media screen and (max-width:990px)
+    .header
+        max-width: 990px
+        width: 100%
+        height: 64px
+
+        .wrapper
+            .hamburger-menu
+                #menu__toggle:checked ~ .menu__box 
+                    visibility: visible
+                    margin-top: 7%
+                    left: 0
+
+@media screen and (max-width:870px)
+    .header
+        max-width: 870px
+        width: 100%
+        height: 64px
+
+        .wrapper
+            .hamburger-menu
+                #menu__toggle:checked ~ .menu__box 
+                    visibility: visible
+                    margin-top: 7.5%
+                    left: 0
+@media screen and (max-width:800px)
+    .header
+        max-width: 800px
+        width: 100%
+        height: 64px
+
+        .wrapper
+            .hamburger-menu
+                #menu__toggle:checked ~ .menu__box 
+                    visibility: visible
+                    margin-top: 8.2%
+                    left: 0
 
 @media screen and (max-width:768px)
     .header
@@ -193,6 +469,143 @@
                     margin-top: 8.3%
                     left: 0
 
+@media screen and (max-width:680px)
+     .header
+        max-width: 680px
+        width: 100%
+        height: 64px
+
+        .wrapper
+            max-width: 640px
+            width: 100%
+            .hamburger-menu
+                #menu__toggle:checked ~ .menu__box 
+                    visibility: visible
+                    margin-top: 9%
+                    left: 0
+@media screen and (max-width:660px)
+    .header
+        max-width: 660px
+        width: 100%
+        height: 64px
+
+        .wrapper
+            max-width: 640px
+            width: 100%
+            .hamburger-menu
+                #menu__toggle:checked ~ .menu__box 
+                    visibility: visible
+                    margin-top: 10%
+                    left: 0 
+@media screen and (max-width:600px)
+    .header
+        max-width: 660px
+        width: 100%
+        height: 64px
+
+        .wrapper
+            max-width: 640px
+            width: 100%
+            .hamburger-menu
+                #menu__toggle:checked ~ .menu__box 
+                    visibility: visible
+                    margin-top: 11%
+                    left: 0 
+@media screen and (max-width:545px)
+    .header
+        max-width: 545px
+        width: 100%
+        height: 64px
+
+        .wrapper
+            max-width: 520px
+            width: 100%
+            .hamburger-menu
+                #menu__toggle:checked ~ .menu__box 
+                    visibility: visible
+                    margin-top: 12%
+                    left: 0 
+@media screen and (max-width:520px)
+     .header
+        max-width: 520px
+        width: 100%
+        .wrapper
+            max-width: 500px
+            width: 100%
+            .register
+                max-width: 139px
+                width: 100%
+                height: 32px
+                font-family: 'Inter'
+                font-style: normal
+                font-weight: 700
+                font-size: 12px
+                line-height: 150%
+            .photo
+                .photo1
+                    display: none
+                .photo2
+                    display: block
+            .hamburger-menu
+                width: 20%
+                #menu__toggle:checked ~ .menu__box 
+                    visibility: visible
+                    margin-top: 12.8%
+                    left: 0
+@media screen and (max-width:450px)
+     .header
+        max-width: 450px
+        width: 100%
+        .wrapper
+            max-width: 400px
+            width: 100%
+            .register
+                max-width: 139px
+                width: 100%
+                height: 32px
+                font-family: 'Inter'
+                font-style: normal
+                font-weight: 700
+                font-size: 12px
+                line-height: 150%
+            .photo
+                .photo1
+                    display: none
+                .photo2
+                    display: block
+            .hamburger-menu
+                width: 20%
+                #menu__toggle:checked ~ .menu__box 
+                    visibility: visible
+                    margin-top: 14.8%
+                    left: 0
+@media screen and (max-width:400px)
+     .header
+        max-width: 400px
+        width: 100%
+        .wrapper
+            max-width: 360px
+            width: 100%
+            .register
+                max-width: 139px
+                width: 100%
+                height: 32px
+                font-family: 'Inter'
+                font-style: normal
+                font-weight: 700
+                font-size: 12px
+                line-height: 150%
+            .photo
+                .photo1
+                    display: none
+                .photo2
+                    display: block
+            .hamburger-menu
+                width: 20%
+                #menu__toggle:checked ~ .menu__box 
+                    visibility: visible
+                    margin-top: 15.8%
+                    left: 0
 @media screen and (max-width:360px)
     .header
         max-width: 360px
