--- a/src/Components/Home/Home.sass
+++ b/src/Components/Home/Home.sass
@@ -95,7 +95,47 @@
             display: none
         .photo3
             display: none
-
+@media screen and (max-width:1150px)
+    .home
+        max-width: 1150px
+        width: 100%
+        .wrapper
+            max-width: 1024px
+            width: 100%
+            .text
+                margin-left: 5%
+                .text1
+                    width: 110%
+                    height: 208px
+                    font-size: 40px
+                    line-height: 130%
+                    .ern
+                        font-family: 'Inter'
+                        font-style: normal
+                        font-weight: 700
+                        font-size: 40px
+                        line-height: 130%
+                    .ner
+                        font-family: 'Inter'
+                        font-style: normal
+                        font-weight: 700
+                        font-size: 40px
+                        line-height: 130%
+                    .ner2
+                        font-family: 'Inter'
+                        font-style: normal
+                        font-weight: 700
+                        font-size: 40px
+                        line-height: 130%
+                .text2
+                    margin-top: 6%
+            .photo1
+                display: block
+                width: 30%
+                margin-top: -8%
+                margin-left: -32%
+            .photo 
+                display: none
 @media screen and (max-width:1024px)
     .home
         max-width: 1024px
@@ -138,7 +178,46 @@
             .photo 
                 display: none
 
-
+@media screen and (max-width:990px)
+    .home
+        max-width: 990px
+        width: 100%
+        .wrapper
+            max-width: 744px
+            width: 100%
+            display: flex
+            flex-direction: column
+            .photo1
+                display: none
+            .photo2
+                order: 1
+                display: block
+            .text
+                align-items: center
+                justify-content: center
+                margin-left: 0
+                width: 100%
+                order: 2
+                .text1
+                    max-width: 100%
+                    font-size: 36px
+                    line-height: 44px
+                    text-align: center
+                    height: 140px
+                    .ern
+                        font-size: 36px
+                        line-height: 44px 
+                    .ner
+                        font-size: 36px
+                        line-height: 44px
+                    .ner2
+                        font-size: 36px
+                        line-height: 44px                       
+                .text2
+                    margin-top: 4%
+                    text-align: center
+                .button
+                    margin-top: 4%
 @media screen and (max-width:768px)
     .home
         max-width: 768px
@@ -180,7 +259,45 @@
                 .button
                     margin-top: 4%
 
-
+@media screen and (max-width:640px)
+    .home
+        padding-top: 5%
+        max-width: 640px
+        width: 100%
+        height: 750px
+        .wrapper
+            max-width: 420px
+            width: 100%
+            .photo2
+                display: none
+            .photo3
+                margin-top: -10%
+                display: block
+                order: 1
+            .text
+                .text1
+                    width: 100%
+                    font-size: 24px
+                    line-height: 29px
+                    .ern
+                        font-size: 24px
+                        line-height: 29px
+                    .ner
+                        font-size: 24px
+                        line-height: 29px  
+                    .ner2
+                        font-size: 24px
+                        line-height: 29px                         
+                .text2
+                    width: 92%
+                    font-size: 16px
+                    line-height: 150%
+                .button
+                    max-width: 282px
+                    width: 100%
+                    height: 60px
+                    font-size: 18px
+                    line-height: 150%
 @media screen and (max-width: 360px)
     .home
         padding-top: 5%
