--- a/src/Components/Pricing/1/Pr1.sass
+++ b/src/Components/Pricing/1/Pr1.sass
@@ -120,6 +120,60 @@
                         line-height: 150%
                         text-align: center
                         color: #FFFFFF
+@media screen and (max-width:1150px)
+    .Pr1
+        padding-top: 17%
+        max-width: 1150px
+        width: 100%
+        .wrapper
+            max-width: 1024px
+            width: 100%
+            .text
+                align-items: center
+                justify-content: center
+                .text1
+                    font-size: 40px
+                    line-height: 48px
+                .text2
+                    margin-top: 1%
+            .block
+                justify-content: center
+                .block1
+                    width: 31%
+                    .block1_1
+                        max-width: 301px
+                        width: 100%
+                        height: 418px
+                        .span1
+                            max-width: 237px
+                            width: 100%
+                            height: 192px
+                            font-size:  15.5px
+                            line-height: 150%
+                .block2
+                    width: 31%
+                    .block2_2
+                        max-width: 301px
+                        width: 100%
+                        height: 418px
+                        .span2
+                            max-width: 237px
+                            width: 100%
+                            height: 192px
+                            font-size:  15.5px
+                            line-height: 150%
+                .block3
+                    width: 31%
+                    .block3_3
+                        max-width: 301px
+                        width: 100%
+                        height: 418px
+                        .span3
+                            max-width: 237px
+                            width: 100%
+                            height: 192px
+                            font-size: 15.5px
+                            line-height: 150%
 
 @media screen and (max-width:1024px)
     .Pr1
@@ -149,7 +203,7 @@
                             max-width: 237px
                             width: 100%
                             height: 192px
-                            font-size: 16px
+                            font-size:  15.5px
                             line-height: 150%
                 .block2
                     width: 31%
@@ -161,7 +215,7 @@
                             max-width: 237px
                             width: 100%
                             height: 192px
-                            font-size: 16px
+                            font-size:  15.5px
                             line-height: 150%
                 .block3
                     width: 31%
@@ -173,9 +227,69 @@
                             max-width: 237px
                             width: 100%
                             height: 192px
-                            font-size: 16px
+                            font-size:  15.5px
                             line-height: 150%
-
+@media screen and (max-width:990px)
+   .Pr1
+        max-width: 990px
+        width: 100%
+        height: 1100px
+        .wrapper
+            max-width: 744px
+            width: 100%
+            .text
+                flex-direction: column
+                .text1
+                    font-size: 36px
+                    line-height: 130%
+            .block
+                flex-direction: column
+                justify-content: center
+                align-items: center
+                .block1
+                    width: 100%
+                    justify-content: center
+                    .block1_1
+                        max-width: 610px
+                        width: 100%
+                        height: 260px
+                        flex-direction: row
+                        .span1
+                            margin-left: 10%
+                            max-width: 318px
+                            width: 100%
+                            height: 144px
+                            text-align: left
+                .block2
+                    width: 100%
+                    justify-content: center
+                    .block2_2
+                        margin-top: 3%
+                        max-width: 610px
+                        width: 100%
+                        height: 260px
+                        flex-direction: row
+                        .span2
+                            margin-left: 10%
+                            max-width: 318px
+                            width: 51%
+                            height: 144px
+                            text-align: left
+                .block3
+                    width: 100%
+                    justify-content: center
+                    .block3_3
+                        margin-top: 3%
+                        max-width: 610px
+                        width: 100%
+                        height: 260px
+                        flex-direction: row
+                        .span3
+                            margin-left: 10%
+                            max-width: 318px
+                            width: 50%
+                            height: 144px
+                            text-align: left 
 @media screen and (max-width:768px)
     .Pr1
         max-width: 768px
@@ -238,7 +352,72 @@
                             height: 144px
                             text-align: left
 
-
+@media screen and (max-width:640px)
+    .Pr1
+        padding-top: 35%
+        max-width: 640px
+        width: 100%
+        height: 1400px
+        .wrapper
+            max-width: 520px
+            width: 100%
+            .text
+                .text1
+                    margin-left: 10%
+                    font-size: 24px
+                    line-height: 130%
+                .text2
+                    margin-top: 1%
+                    margin-left: 5%
+                    font-size: 16px
+                    line-height: 19px
+            .block
+                .block1
+                    margin-top: 3%
+                    .block1_1
+                        flex-direction: column
+                        max-width: 328px
+                        width: 100%
+                        height: 311px
+                        .span1
+                            max-width: 280px
+                            width: 100%
+                            height: 126px
+                            text-align: center
+                            margin-left: 0
+                            font-size: 14px
+                            line-height: 150%
+                .block2
+                    margin-top: 5%
+                    .block2_2
+                        flex-direction: column
+                        max-width: 328px
+                        width: 100%
+                        height: 311px
+                        .span2
+                            max-width: 280px
+                            width: 100%
+                            height: 126px
+                            text-align: center
+                            margin-left: 0
+                            font-size: 14px
+                            line-height: 150%
+                .block3
+                    margin-top: 5%
+                    .block3_3
+                        flex-direction: column
+                        max-width: 328px
+                        width: 100%
+                        height: 311px
+                        .span3
+                            max-width: 282px
+                            width: 100%
+                            height: 126px
+                            text-align: center
+                            margin-left: 0
+                            font-size: 14px
+                            line-height: 150%
+                
 @media screen and (max-width:360px)
     .Pr1
         padding-top: 35%
