--- a/src/Components/Testimonials/Testimonials.sass
+++ b/src/Components/Testimonials/Testimonials.sass
@@ -55,7 +55,22 @@
             color: #FFFFFF
             border: none
 
-
+@media screen and (max-width:1150px)
+    .Testimonials
+        max-width: 1150px
+        width: 100%
+        .wrapper
+            max-width: 1024px
+            width: 100%
+            .text1
+                margin-left: 5%
+                font-size: 40px
+                line-height: 48px
+            .text2
+                width: 94%
+                margin-left: 5%
+            .button
+                margin-left: 5%
 @media screen and (max-width:1024px)
     .Testimonials
         max-width: 1024px
@@ -72,7 +87,28 @@
                 margin-left: 5%
             .button
                 margin-left: 5%
-
+@media screen and (max-width:990px)
+     .Testimonials
+        max-width: 990px
+        width: 100%
+        height: 564px
+        .wrapper
+            max-width: 744px
+            width: 100%
+            align-items: center
+            justify-content: center
+            .text1
+                width: 100%
+                margin-left: 0
+                font-size: 36px
+                line-height: 44px
+                text-align: center
+            .text2
+                width: 88%
+                text-align: center
+                margin-left: 0
+            .button
+                margin-left: 0
 @media screen and (max-width:768px)
     .Testimonials
         max-width: 768px
@@ -95,7 +131,34 @@
                 margin-left: 0
             .button
                 margin-left: 0
-
+@media screen and (max-width:640px)
+    .Testimonials
+        max-width: 640px
+        width: 100%
+        .wrapper
+            max-width: 520px
+            width: 100%
+            .text1
+                width: 100%
+                font-size: 24px
+                line-height: 29px
+                .big
+                    font-size: 24px
+                    line-height: 29px
+                .br
+                    display: none
+            .text2
+                margin-top: 10%
+                width: 95%
+                font-size: 16px
+                line-height: 150%            
+            .button
+                margin-top: 10%
+                max-width: 282px
+                width: 100%
+                height: 60px
+                font-size: 18px
+                line-height: 150%
 @media screen and (max-width:360px)
     .Testimonials
         max-width: 360px
